update database columns to be camel case. update all tests to reflect this, and areas in frontend affected by change. resolve bug with autocomplete to show all labels